# src/main/java/com/b4rrhh/payroll/application/usecase/PayrollLaunchTargetSelectionType.java
@@ -2,5 +2,6 @@ package com.b4rrhh.payroll.application.usecase;
 
 public enum PayrollLaunchTargetSelectionType {
     SINGLE_EMPLOYEE,
-    EMPLOYEE_LIST
+    EMPLOYEE_LIST,
+    ALL_EMPLOYEES_WITH_PRESENCE_IN_PERIOD
 }
